remove dependency lodash

--- a/populationDensity/package.json
+++ b/populationDensity/package.json
@@ -23,8 +23,7 @@
     "loopback-connector-mongodb": "^3.9.2",
     "serve-favicon": "^2.0.1",
     "socket.io": "^2.2.0",
-    "strong-error-handler": "^2.0.0",
-    "lodash": "^3.10.1"
+    "strong-error-handler": "^2.0.0"
   },
   "devDependencies": {
     "@loopback/testlab": "^1.0.3",
